# Predicting-Myers-Briggs-Type-Indicator-with-Recurrent-Neural-Networks

./: .gitignore  .pre-commit-config.yaml  README.md  average_prob_predictor.py  baseline.py  clean_distribution.py  differentiate_words.py  make_test_set.py  make_training_set.py  make_trump.py  pyproject.toml  rnn.py  separate_clean_and_unclean.py  test_set_post_classification_IE.txt  trump_predictor.py  word_cloud.py
trump prediction/: predictor.py  trumptweets.csv
trump_prediction/: predictor.py
word clouds/: differentiate_words.py  extreme_examples_E.txt  extreme_examples_F.txt  extreme_examples_I.txt  extreme_examples_J.txt  extreme_examples_N.txt  special_words_E.txt  special_words_F.txt  special_words_N.txt  special_words_P.txt  special_words_T.txt  word_cloud.py
word_clouds/: differentiate_words.py  extreme_examples_P.txt  extreme_examples_S.txt  extreme_examples_T.txt  special_words_I.txt  special_words_J.txt  special_words_S.txt  word_cloud.py
